# komodo_2.0

./: README.md
komodo2/: setup.sh
komodo2/launch/: komodo2.launch
komodo2/rules/: 49-teensy.rules  bms_battery.rules  hokuyo.rules  microsoft_webcam.rules  roboteq.rules
komodo2/third_party_files/: ros-kinetic-ric-interface_0.0.0-0xenial_amd64.deb
komodo2_control/config/: komodo2_control.yaml
komodo2_control/launch/: komodo2_controllers.launch
komodo2_controllers/config/: arm_joints.yaml
komodo2_demos/drive2person/: CMakeLists.txt  package.xml
komodo2_demos/drive2person/src/: drive2person_node.py
komodo2_description/: CMakeLists.txt  package.xml
komodo2_description/launch/: rviz_state_pub.launch
komodo2_description/mesh/: base_link.STL  laser_link.STL
komodo2_description/urdf/: komodo.xacro  komodo2.xacro  komodo2_gazebo.xacro  komodo_gazebo.xacro
komodo2_gazebo/macros/: depth_cam.xacro  imu.xacro  kinect2.xacro  softkinetic_camera_ds325.xacro
komodo2_gazebo/worlds/: test.world
komodo2_hw/: CMakeLists.txt
komodo2_hw/include/: battery_pub.h  komodo2_hw.h  ricboard_pub.h  roboteq_diff_drive.h
komodo2_hw/launch/: komodo2_hw.launch
komodo2_hw/src/: komodo2_hw.cpp  komodo2_hw_node.cpp  ricboard_pub.cpp
komodo2_navigation/config/: costmap_exploration.yaml  local_costmap_params.yaml
komodo2_utils/bms_interface/example/: bms_example.cpp
komodo2_utils/bms_interface/src/: bms_interface.cpp
komodo2_utils/iai_kinect2/kinect2_bridge/data/010213765147/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
komodo2_utils/iai_kinect2/kinect2_bridge/data/010788465147/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
komodo2_utils/iai_kinect2/kinect2_bridge/launch/: kinect2_bridge.launch  kinect2_bridge_demo.launch
komodo2_utils/intel_d435/launch/: d435.launch
komodo2_utils/lidar_urg_node/launch/: lidar.launch
komodo2_utils/ric_driver/: ricboard_v3.ino.hex
komodo2_utils/ric_interface/: CMakeLists.txt  package.xml
komodo2_utils/ric_interface/hardware_driver/: ricboard_v3.ino.hex
komodo2_utils/ric_interface/include/ric_interface/: communicator.h  crc8.h  protocol.h  ric_exception.h  ric_interface.h  sensors_state.h  serial_com.h  timer.h
komodo2_utils/ric_interface/src/: ric_interface.cpp  ric_interface_node.cpp  serial_com.cpp  timer.cpp
komodo2_utils/roboteq_control/docs/: Armadillo2-roborunplus-24-01-18.xml  armadillo2_roborun_profile.xml
komodo2_utils/roboteq_control/include/roboteq/: motor.h  roboteq.h
komodo2_utils/roboteq_control/src/configurator/: motor_param.cpp
komodo2_utils/roboteq_control/src/roboteq/: motor.cpp  roboteq.cpp
komodo2_utils/softkinetic/softkinetic_camera/launch/: softkinetic_camera_ds325.launch
komodo2_utils/softkinetic/softkinetic_camera/src/: softkinetic_start.cpp
komodo2_utils/softkinetic/softkinetic_camera/urdf/: sofkinetic_ds325.xacro
komodo2_utils/usb_cams/launch/: front_cam.launch  rear_cam.launch
